--- a/requirements.txt
+++ b/requirements.txt
@@ -2,30 +2,14 @@ autobahn==0.10.4
 beautifulsoup4==4.4.1
 cycler==0.9.0
 funcsigs==0.4
-ImageHash==1.0
 matplotlib==1.5.1
 mock==1.3.0
 nose==1.3.7
 numpy==1.10.4
-openface==0.2.1
-pandas==0.17.1
-pbr==1.8.1
-Pillow==3.1.1
 protobuf==2.6.1
 pymongo==3.3.0
 pyparsing==2.0.6
 python-dateutil==2.4.2
 pytz==2015.7
-scikit-learn==0.17.1
-scipy==0.16.1
 selenium==2.48.0
-six==1.10.0
-stevedore==1.10.0
-Twisted==15.2.1
-txaio==2.2.1
-vboxapi==1.0
-virtualenv==13.1.2
-virtualenv-clone==0.2.6
-virtualenvwrapper==4.7.1
-wheel==0.26.0
-zope.interface==4.1.3
+urlparse2==1.1.1
