--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 autobahn==0.10.4
-beautifulsoup4==4.4.1
+beautifulsoup4==4.6.0
 cycler==0.9.0
 funcsigs==0.4
 mock==1.3.0
@@ -11,3 +11,4 @@ python-dateutil==2.4.2
 pytz==2015.7
 selenium==2.48.0
 urlparse2==1.1.1
+requests==2.18.4
